--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - database
+      database:
+        condition: service_started
+        required: true
+    volumes:
+      - ./uploads:/usr/water-and-gas-reading-system/uploads
     ports:
       - 80:80
