--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "prisma:migrate": "dotenv -e arquivo.env -- npx prisma migrate deploy",
+    "prisma:migrate-dev": "dotenv -e arquivo.env -- npx prisma migrate dev --name init",
+    "prisma:migrate": "npx prisma migrate deploy",
     "prisma:studio": "dotenv -e arquivo.env -- npx prisma studio",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "npm run prisma:migrate && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
